Interpretación de resultados y conclusiones

--- a/HDT5.ipynb
+++ b/HDT5.ipynb
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -884,11 +884,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Random Forest</td>\n",
-       "      <td>0.606174</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Regresión Lineal</td>\n",
        "      <td>0.673100</td>\n",
@@ -898,25 +893,30 @@
        "      <td>KNN Regresión</td>\n",
        "      <td>0.732277</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>0.606174</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "             Modelo       MSE\n",
-       "2     Random Forest  0.606174\n",
        "0  Regresión Lineal  0.673100\n",
-       "1     KNN Regresión  0.732277"
+       "1     KNN Regresión  0.732277\n",
+       "2     Random Forest  0.606174"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.DataFrame({'Modelo': ['Regresión Lineal', 'KNN Regresión', 'Random Forest'], \n",
-    "              'MSE': [abs(scores_lin_reg.mean()), abs(scores_knn.mean()), abs(scores_rf.mean())]}).sort_values(by='MSE')"
+    "              'MSE': [abs(scores_lin_reg.mean()), abs(scores_knn.mean()), abs(scores_rf.mean())]})"
    ]
   },
   {
@@ -946,6 +946,48 @@
     "plt.ylabel('Puntuación Media (Negativo MSE)')\n",
     "plt.ylim(min(scores) - 0.1, max(scores) + 0.1)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interpretación de Resultados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regresión Lineal: Las puntuaciones de validación cruzada muestran que la regresión lineal tiene un desempeño moderado, con un error cuadrático medio promedio de alrededor de 0.673. Esto significa que, la regresión lineal es capaz de predecir los valores objetivo con un nivel de precisión aceptable, aunque podría estar subestimando o sobreestimando en algunos casos debido a su linealidad."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "KNN Regresión: Las puntuaciones de validación cruzada muestran que KNN supera ligeramente a la regresión lineal, con un error cuadrático medio promedio de aproximadamente 0.732. Esto significa que KNN está adquiriendo mejor la complejidad del conjunto de datos al considerar la cercanía de los vecinos más cercanos, lo que resulta en una mejor capacidad para predecir los valores objetivo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forest: Aunque Random Forest obtiene una puntuación de validación cruzada media de alrededor de 0.606, la más baja de los tres modelos, sigue siendo una opción viable. Sin embargo, su desempeño es ligeramente inferior al de los otros dos modelos en este conjunto de datos, lo que indica que podría no estar adquiriendo todas las relaciones en los datos de manera tan efectiva como los otros modelos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusiones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En base a las puntuaciones de validación cruzada y la interpretación de los resultados, se puede concluir que KNN Regresión es el modelo que mejor se desempeña en este conjunto de datos, seguido por la Regresión Lineal y luego Random Forest. La capacidad de KNN Regresión para considerar la cercanía de los vecinos más cercanos parece ser crucial para capturar la complejidad del conjunto de datos y realizar predicciones más precisas. Aunque la Regresión Lineal muestra un desempeño moderado y Random Forest sigue siendo una opción viable, KNN Regresión destaca por su capacidad para manejar relaciones no lineales en los datos."
    ]
   }
  ],
